--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               id="navbarsExample11"
             >
               <a class="navbar-brand col-lg-3 me-0 homepage-logo" href="#"
-                ><img src="/images/Logo 1.png" alt="logo" height="48px"
+                ><img src="images/Logo 1.png" alt="logo" height="48px"
               /></a>
 
               <ul
