--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           >
             <div class="col-10 col-sm-8 col-lg-6 logo-center">
               <img
-                src="/images/Logo 1.png"
+                src="images/Logo 1.png"
                 class="d-block mx-lg-auto img-fluid"
                 alt="Bootstrap Themes"
                 width="700"
