--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         >
           <div class="card m-2 p-0" style="width: 18rem">
             <img
-              src="/images/airport.jpg"
+              src="images/airport.jpg"
               class="card-img-top"
               alt="..."
               height="200px"
@@ -203,7 +203,7 @@
           </div>
           <div class="card m-2 p-0" style="width: 18rem">
             <img
-              src="/images/full.jpg"
+              src="images/full.jpg"
               class="card-img-top"
               alt="..."
               height="200px"
@@ -224,7 +224,7 @@
           </div>
           <div class="card m-2 p-0" style="width: 18rem">
             <img
-              src="/images/half.jpg"
+              src="images/half.jpg"
               class="card-img-top"
               alt="..."
               height="200px"
@@ -272,7 +272,7 @@
         >
           <div class="card m-2 p-0" style="width: 18rem">
             <img
-              src="/images/culture.jpg"
+              src="images/culture.jpg"
               class="card-img-top"
               alt="..."
               height="200px"
@@ -294,7 +294,7 @@
           </div>
           <div class="card m-2 p-0" style="width: 18rem">
             <img
-              src="/images/nusa.jpg"
+              src="images/nusa.jpg"
               class="card-img-top"
               alt="..."
               height="200px"
@@ -316,7 +316,7 @@
           </div>
           <div class="card m-2 p-0" style="width: 18rem">
             <img
-              src="/images/zoo.jpg"
+              src="images/zoo.jpg"
               class="card-img-top"
               alt="..."
               height="200px"
@@ -338,7 +338,7 @@
           </div>
           <div class="card m-2 p-0" style="width: 18rem">
             <img
-              src="/images/water.jpg"
+              src="images/water.jpg"
               class="card-img-top"
               alt="..."
               height="200px"
@@ -717,7 +717,6 @@
                   <ul class="package-list">
                     <li>Thousand island</li>
                     <li>Diamond Beach l</li>
-                    <li>Diamond Beach ll</li>
                     <li>Teletubies hill</li>
                     <li>Atuh Beach</li>
                   </ul>
