--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
           </div>
           <div class="card m-2 p-0" style="width: 18rem">
             <img
-              src="/images/group.jpg"
+              src="images/group.jpg"
               class="card-img-top"
               alt="..."
               height="200px"
