--- a/index.html
+++ b/index.html
@@ -1443,7 +1443,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
             <img
-              src="/images/pexels-aditya-agarwal-1477310.jpg"
+              src="images/pexels-aditya-agarwal-1477310.jpg"
               class="w-100 shadow-1-strong rounded mb-4"
               alt="Boat on Calm Water"
             />
@@ -1471,7 +1471,7 @@
 
           <div class="col-lg-4 mb-4 mb-lg-0">
             <img
-              src="/images/pexels-dimitri-dim-1802183.jpg"
+              src="images/pexels-dimitri-dim-1802183.jpg"
               class="w-100 shadow-1-strong rounded mb-4"
               alt="Waves at Sea"
             />
@@ -1486,7 +1486,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
             <img
-              src="/images/pexels-darren-lawrence-3822070.jpg"
+              src="images/pexels-darren-lawrence-3822070.jpg"
               class="w-100 shadow-1-strong rounded mb-4"
               alt="Boat on Calm Water"
             />
@@ -1538,7 +1538,7 @@
           <div class="row">
             <div class="col-lg-4 p-4">
               <img
-              src="/images/cus2.png"
+              src="images/cus2.png"
               alt=""
               <svg
                 class="bd-placeholder-img rounded-circle mb-4 review-border"
@@ -1571,7 +1571,7 @@
             <!-- /.col-lg-4 -->
             <div class="col-lg-4 p-4">
               <img
-              src="/images/cus1.png"
+              src="images/cus1.png"
               alt=""
               <svg
                 class="bd-placeholder-img rounded-circle mb-4 review-border"
@@ -1602,7 +1602,7 @@
             <!-- /.col-lg-4 -->
             <div class="col-lg-4 p-4">
               <img
-              src="/images/cus3.png"
+              src="images/cus3.png"
               alt=""
               <svg
                 class="bd-placeholder-img rounded-circle mb-4 review-border"
@@ -1643,7 +1643,7 @@
               href="/"
               class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none footer-img"
             >
-              <img src="/images/Logo 1.png" alt="" class="footer-img" />
+              <img src="images/Logo 1.png" alt="" class="footer-img" />
             </a>
             <p class="text-center footer-copyright">
               Copyright © 2024 Brothers Bali Tours
