--- a/index.html
+++ b/index.html
@@ -1637,61 +1637,22 @@
     </section>
     <section id="footer">
       <div class="container footer-container rounded-3">
-        <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 footer-align">
-          <div class="col mb-3 footer-text">
+        <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 px-3 my-5">
+          <div class="col mb-3">
             <a
               href="/"
-              class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none footer-img"
+              class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none"
             >
-              <img src="images/Logo 1.png" alt="" class="footer-img" />
+              <img src="/images/Logo 1.png" alt="" class="footer-logo" />
             </a>
-            <p class="text-center footer-copyright">
+            <p class="text-body-secondary footer-text">
               Copyright © 2024 Brothers Bali Tours
             </p>
           </div>
   
-
+          <div class="col mb-3"></div>
   
-          <div class="col mb-3 footer-text">
-            <h5>Follow Us</h5>
-            <ul class="nav flex-column">
-              <li class="nav-item mb-2">
-                <div class="follow-div follow-div-face">
-                  <svg class="svg-face" fill="#171144" height="24px" width="24px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M12 2.03998C6.5 2.03998 2 6.52998 2 12.06C2 17.06 5.66 21.21 10.44 21.96V14.96H7.9V12.06H10.44V9.84998C10.44 7.33998 11.93 5.95998 14.22 5.95998C15.31 5.95998 16.45 6.14998 16.45 6.14998V8.61998H15.19C13.95 8.61998 13.56 9.38998 13.56 10.18V12.06H16.34L15.89 14.96H13.56V21.96C15.9164 21.5878 18.0622 20.3855 19.6099 18.57C21.1576 16.7546 22.0054 14.4456 22 12.06C22 6.52998 17.5 2.03998 12 2.03998Z"></path> </g></svg>
-                  <a href="#" class="nav-link p-0 text-body-secondary follow-text"
-                    >Facebook</a
-                  >
-                </div>
-              </li>
-              <li class="nav-item mb-2">
-                <div class="follow-div">
-                  <svg fill="#171144" height="20px" width="20px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-143 145 512 512" xml:space="preserve"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <path d="M113,446c24.8,0,45.1-20.2,45.1-45.1c0-9.8-3.2-18.9-8.5-26.3c-8.2-11.3-21.5-18.8-36.5-18.8s-28.3,7.4-36.5,18.8 c-5.3,7.4-8.5,16.5-8.5,26.3C68,425.8,88.2,446,113,446z"></path> <polygon points="211.4,345.9 211.4,308.1 211.4,302.5 205.8,302.5 168,302.6 168.2,346 "></polygon> <path d="M183,401c0,38.6-31.4,70-70,70c-38.6,0-70-31.4-70-70c0-9.3,1.9-18.2,5.2-26.3H10v104.8C10,493,21,504,34.5,504h157 c13.5,0,24.5-11,24.5-24.5V374.7h-38.2C181.2,382.8,183,391.7,183,401z"></path> <path d="M113,145c-141.4,0-256,114.6-256,256s114.6,256,256,256s256-114.6,256-256S254.4,145,113,145z M241,374.7v104.8 c0,27.3-22.2,49.5-49.5,49.5h-157C7.2,529-15,506.8-15,479.5V374.7v-52.3c0-27.3,22.2-49.5,49.5-49.5h157 c27.3,0,49.5,22.2,49.5,49.5V374.7z"></path> </g> </g></svg>
-                  <a href="#" class="nav-link p-0 text-body-secondary follow-text"
-                  >Instagram</a
-                </div>
-                
-                
-              </li>
-            </ul>
-          </div>
-  
-          <div class="col mb-3 footer-text">
-            <h5>Contact Us</h5>
-            <ul class="nav flex-column">
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary"
-                  >+62 857-9240-4100</a
-                >
-              </li>
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary"
-                  >+62 812-3669-5190</a
-                >
-              </li>
-            </ul>
-          </div>
-  
-          <div class="col mb-3 footer-text">
+          <div class="col mb-3">
             <h5>Pick Up Times</h5>
             <ul class="nav flex-column">
               <li class="nav-item mb-2">
@@ -1723,6 +1684,90 @@
                 <a href="#" class="nav-link p-0 text-body-secondary"
                   >Sanur - 08:00</a
                 >
+              </li>
+            </ul>
+          </div>
+  
+          <div class="col mb-3">
+            <h5>Contact Us</h5>
+            <ul class="nav flex-column">
+              <li class="nav-item mb-2">
+                <a href="#" class="nav-link p-0 text-body-secondary"
+                  >+62 857-9240-4100</a
+                >
+              </li>
+              <li class="nav-item mb-2">
+                <a href="#" class="nav-link p-0 text-body-secondary"
+                  >+62 812-3669-5190</a
+                >
+              </li>
+            </ul>
+          </div>
+  
+          <div class="col mb-3">
+            <h5>Follow Us</h5>
+            <ul class="nav flex-column">
+              <li class="nav-item mb-2">
+                <a
+                  href="https://www.google.com/"
+                  class="nav-link p-0 text-body-secondary"
+                  ><svg
+                    fill="#171144"
+                    viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg"
+                    height="24px"
+                  >
+                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                    <g
+                      id="SVGRepo_tracerCarrier"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    ></g>
+                    <g id="SVGRepo_iconCarrier">
+                      <path
+                        d="M12 2.03998C6.5 2.03998 2 6.52998 2 12.06C2 17.06 5.66 21.21 10.44 21.96V14.96H7.9V12.06H10.44V9.84998C10.44 7.33998 11.93 5.95998 14.22 5.95998C15.31 5.95998 16.45 6.14998 16.45 6.14998V8.61998H15.19C13.95 8.61998 13.56 9.38998 13.56 10.18V12.06H16.34L15.89 14.96H13.56V21.96C15.9164 21.5878 18.0622 20.3855 19.6099 18.57C21.1576 16.7546 22.0054 14.4456 22 12.06C22 6.52998 17.5 2.03998 12 2.03998Z"
+                      ></path>
+                    </g></svg
+                ></a>
+              </li>
+              <li class="nav-item mb-2">
+                <a
+                  href="https://www.instagram.com/brothersbalitours/"
+                  class="nav-link p-0 text-body-secondary"
+                  ><svg
+                    fill="#171144"
+                    height="22px"
+                    width="22px"
+                    version="1.1"
+                    id="Layer_1"
+                    xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink"
+                    viewBox="-143 145 512 512"
+                    xml:space="preserve"
+                  >
+                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                    <g
+                      id="SVGRepo_tracerCarrier"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    ></g>
+                    <g id="SVGRepo_iconCarrier">
+                      <g>
+                        <path
+                          d="M113,446c24.8,0,45.1-20.2,45.1-45.1c0-9.8-3.2-18.9-8.5-26.3c-8.2-11.3-21.5-18.8-36.5-18.8s-28.3,7.4-36.5,18.8 c-5.3,7.4-8.5,16.5-8.5,26.3C68,425.8,88.2,446,113,446z"
+                        ></path>
+                        <polygon
+                          points="211.4,345.9 211.4,308.1 211.4,302.5 205.8,302.5 168,302.6 168.2,346 "
+                        ></polygon>
+                        <path
+                          d="M183,401c0,38.6-31.4,70-70,70c-38.6,0-70-31.4-70-70c0-9.3,1.9-18.2,5.2-26.3H10v104.8C10,493,21,504,34.5,504h157 c13.5,0,24.5-11,24.5-24.5V374.7h-38.2C181.2,382.8,183,391.7,183,401z"
+                        ></path>
+                        <path
+                          d="M113,145c-141.4,0-256,114.6-256,256s114.6,256,256,256s256-114.6,256-256S254.4,145,113,145z M241,374.7v104.8 c0,27.3-22.2,49.5-49.5,49.5h-157C7.2,529-15,506.8-15,479.5V374.7v-52.3c0-27.3,22.2-49.5,49.5-49.5h157 c27.3,0,49.5,22.2,49.5,49.5V374.7z"
+                        ></path>
+                      </g>
+                    </g></svg
+                ></a>
               </li>
             </ul>
           </div>
