--- a/index.html
+++ b/index.html
@@ -1643,7 +1643,7 @@
               href="/"
               class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none"
             >
-              <img src="/images/Logo 1.png" alt="" class="footer-logo" />
+              <img src="images/Logo 1.png" alt="" class="footer-logo" />
             </a>
             <p class="text-body-secondary footer-text">
               Copyright © 2024 Brothers Bali Tours
